Fix some dahboard statistics + student quiz show skill name