@@ -1,5 +1,6 @@
 package com.example.professor.controller;
 
+import com.example.professor.dto.StudentDto;
 import com.example.professor.entity.Page;
 import com.example.professor.service.*;
 import lombok.RequiredArgsConstructor;
@@ -17,6 +18,7 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
@@ -111,20 +113,15 @@ public class DashboardController {
 		
 		double publicAvgScore = totalPublicSubmissions == 0 ? 0 : totalPublicScore / totalPublicSubmissions;
 		quizStats.put("publicQuizzesAvgScore", Math.round(publicAvgScore * 100.0) / 100.0);
-		quizStats.put("uniqueQuizParticipants", quizService.getNumberOfUniqueParticipantsForQuizCreatedBYSuperuser(superuserId));
+		long uniqueQuizParticipants = quizService.getNumberOfUniqueParticipantsForQuizCreatedBYSuperuser(superuserId);
+		quizStats.put("uniqueQuizParticipants", uniqueQuizParticipants);
 		quizStats.put("mostAttemptedQuiz", quizService.getMostAttemptedQuizNameCreatedBySuperuser(superuserId));
 
-		// Get skills statistics
-		var bookmarkedSkills = categoryService.getAllBookmarkedCategoriesAndSkills(superuserId);
-		int totalBookmarkedSkills = bookmarkedSkills.stream()
-				.mapToInt(category -> category.getSkills().size())
-				.sum();
-		
 		Map<String, Object> skillStats = new HashMap<>();
 		
 		// Calculate student progress metrics
-		int totalStudents = 0;
-		int studentsWithHighScores = 0; // Students with average score >= 80
+		int totalStudents;
+		int studentsWithHighScores; // Students with average score >= 80
 		
 		// Track unique students across all quizzes
 		Set<String> uniqueStudents = new HashSet<>();
@@ -146,140 +143,18 @@ public class DashboardController {
 		studentsWithHighScores = highPerformingStudents.size();
 		double highPerformersPercentage = totalStudents == 0 ? 0 : 
 			(double) studentsWithHighScores / totalStudents * 100;
-		
+
+		var quizCompletionRateInfo = quizService.getQuizCompletionRate(superuserId);
 		skillStats.put("totalStudents", totalStudents);
-		skillStats.put("completionRate", quizService.getQuizCompletionRate(superuserId));
+		skillStats.put("completionRate", quizCompletionRateInfo.getCompletionRate());
+		skillStats.put("completionTotalStudents", quizCompletionRateInfo.getCompletionTotalStudents());
+		skillStats.put("completedQuizzesStudents", quizCompletionRateInfo.getCompletedQuizzesStudents());
 		skillStats.put("highPerformersCount", studentsWithHighScores);
 		skillStats.put("highPerformersPercentage", Math.round(highPerformersPercentage * 100.0) / 100.0);
-		
-		// Calculate student engagement metrics
-		Map<String, Integer> studentActivity = new HashMap<>();
-		
-		// Count quiz participations
-		for (var quiz : quizzesWithAssignations) {
-			var submissions = assignmentService.getStudentInfoByQuizSubmitted(quiz.getId());
-			for (var submission : submissions) {
-				String studentId = submission.getStudentId();
-				studentActivity.merge(studentId, 1, Integer::sum);
-			}
-		}
-		
-		// Count evaluations
-		for (var category : categoryService.getAllCategoriesAndSkills(superuserId)) {
-			for (var skill : category.getSkills()) {
-				var evaluations = evaluationService.getEvaluationsBySkillId(skill.getId());
-				for (var evaluation : evaluations) {
-					studentActivity.merge(evaluation.getStudentId(), 1, Integer::sum);
-				}
-			}
-		}
-		
-		// Calculate engagement levels
-		int highlyEngagedCount = 0;
-		int totalActivities = quizzesWithAssignations.size() + categoryService.getAllCategoriesAndSkills(superuserId)
-				.stream()
-				.mapToInt(category -> category.getSkills().size())
-				.sum();
-		
-		// Consider a student highly engaged if they've participated in at least 70% of available activities
-		double engagementThreshold = totalActivities * 0.7;
-		for (var entry : studentActivity.entrySet()) {
-			if (entry.getValue() >= engagementThreshold) {
-				highlyEngagedCount++;
-			}
-		}
-		
-		double engagementRate = totalStudents == 0 ? 0 : 
-			(double) highlyEngagedCount / totalStudents * 100;
 
 		// Calculate skill mastery metrics
-		Map<String, Map<String, Double>> studentSkillLevels = new HashMap<>();
-		Map<String, Integer> studentTotalSkills = new HashMap<>();
-		Map<String, Integer> studentMasteredSkills = new HashMap<>();
-		
-		// Count mastery levels across all skills
-		int beginnerCount = 0;
-		int intermediateCount = 0;
-		int advancedCount = 0;
-		
-		// Weight factors for each aspect
-		double interestWeight = 0.2;  // 20% weight
-		double knowledgeWeight = 0.5; // 50% weight
-		double experienceWeight = 0.3; // 30% weight
-		
-		// Get all skills and their evaluations
-		for (var category : categoryService.getAllCategoriesAndSkills(superuserId)) {
-			for (var skill : category.getSkills()) {
-				var evaluations = evaluationService.getEvaluationsBySkillId(skill.getId());
-				for (var evaluation : evaluations) {
-					String studentId = evaluation.getStudentId();
-					
-					// Initialize student's skill tracking if not exists
-					studentSkillLevels.putIfAbsent(studentId, new HashMap<>());
-					studentTotalSkills.putIfAbsent(studentId, 0);
-					studentMasteredSkills.putIfAbsent(studentId, 0);
-					
-					// Calculate weighted average for this skill
-					double count = 0.0;
-					double sum = 0.0;
-					
-					if (evaluation.getInterest() != null) {
-						sum += evaluation.getInterest() * interestWeight;
-						count += interestWeight;
-					}
-					if (evaluation.getKnowledge() != null) {
-						sum += evaluation.getKnowledge() * knowledgeWeight;
-						count += knowledgeWeight;
-					}
-					if (evaluation.getExperience() != null) {
-						sum += evaluation.getExperience() * experienceWeight;
-						count += experienceWeight;
-					}
-					
-					double weightedAverage = count > 0 ? sum / count : 0;
-					studentSkillLevels.get(studentId).merge(skill.getName(), weightedAverage, Math::max);
-					studentTotalSkills.merge(studentId, 1, Integer::sum);
-					
-					// Count skills where student has achieved mastery (weighted average >= 8.0)
-					if (weightedAverage >= 8.0) {
-						studentMasteredSkills.merge(studentId, 1, Integer::sum);
-					}
-					
-					// Count mastery levels
-					if (weightedAverage >= 8.0) {
-						advancedCount++;
-					} else if (weightedAverage >= 5.0) {
-						intermediateCount++;
-					} else {
-						beginnerCount++;
-					}
-				}
-			}
-		}
-		
-		// Calculate mastery rate
-		int studentsWithMastery = 0;
-		for (var studentId : studentTotalSkills.keySet()) {
-			int totalSkills = studentTotalSkills.get(studentId);
-			int masteredSkills = studentMasteredSkills.get(studentId);
-			
-			// Consider a student has mastery if they've achieved mastery in at least 50% of their skills
-			if (totalSkills > 0 && (double) masteredSkills / totalSkills >= 0.5) {
-				studentsWithMastery++;
-			}
-		}
-		
-		double masteryRate = totalStudents == 0 ? 0 : 
-			(double) studentsWithMastery / totalStudents * 100;
-		
-		skillStats.put("masteredSkillsCount", studentsWithMastery);
-		skillStats.put("skillMasteryPercentage", Math.round(masteryRate * 100.0) / 100.0);
-		
-		// Add mastery level distribution
-		skillStats.put("beginnerCount", beginnerCount);
-		skillStats.put("intermediateCount", intermediateCount);
-		skillStats.put("advancedCount", advancedCount);
-		
+		getSkillMasteryDistribution(superuserId, skillStats);
+
 		// Monthly statistics
 		Map<String, Object> monthlyStats = new HashMap<>();
 		monthlyStats.put("months", new ArrayList<>(monthlyCompletions.keySet()));
@@ -298,7 +173,7 @@ public class DashboardController {
 		var topSkills = skillEvaluationCounts.entrySet().stream()
 				.sorted(Map.Entry.<String, Integer>comparingByValue().reversed())
 				.limit(5)
-				.collect(Collectors.toList());
+				.toList();
 
 		List<String> topSkillNames = topSkills.stream().map(Map.Entry::getKey).collect(Collectors.toList());
 		List<Integer> topSkillCounts = topSkills.stream().map(Map.Entry::getValue).collect(Collectors.toList());
@@ -318,7 +193,7 @@ public class DashboardController {
 					var submissions = assignmentService.getStudentInfoByQuizSubmitted(quiz.getId());
 					double quizAvg = submissions.stream()
 							.filter(s -> s.getScore() != null)
-							.mapToDouble(s -> s.getScore())
+							.mapToDouble(StudentDto::getScore)
 							.average()
 							.orElse(0.0);
 					if (quizAvg > 0) {
@@ -350,7 +225,80 @@ public class DashboardController {
 		stats.put("quizStats", quizStats);
 		stats.put("skillStats", skillStats);
 		stats.put("monthlyStats", monthlyStats);
-		
+
+
+		var submittedAssignmentsAndSkillEvaluatedCount = quizService.getUniqueQuizParticipantsNumberWhoEvaluatedTheSkill(superuserId);
+		skillStats.put("skillEvalRate", uniqueQuizParticipants == 0 ? 0 : Math.round(submittedAssignmentsAndSkillEvaluatedCount * 10000.0 / uniqueQuizParticipants) / 100.0);
+		skillStats.put("skillEvalRateCount", submittedAssignmentsAndSkillEvaluatedCount);
+
 		return stats;
+	}
+
+	private void getSkillMasteryDistribution(String superuserId, Map<String, Object> skillStats) {
+		Map<String, Map<String, Double>> studentSkillLevels = new HashMap<>();
+
+		// Count mastery levels across all skills
+		AtomicInteger beginnerCount = new AtomicInteger();
+		AtomicInteger intermediateCount = new AtomicInteger();
+		AtomicInteger advancedCount = new AtomicInteger();
+
+		// Weight factors for each aspect
+		double interestWeight = 0.2;  // 20% weight
+		double knowledgeWeight = 0.5; // 50% weight
+		double experienceWeight = 0.3; // 30% weight
+
+		// Get all skills and their evaluations
+		for (var category : categoryService.getAllCategoriesAndSkills(superuserId)) {
+			for (var skill : category.getSkills()) {
+				var evaluations = evaluationService.getEvaluationsBySkillId(skill.getId());
+				for (var evaluation : evaluations) {
+					String studentId = evaluation.getStudentId();
+
+					// Initialize student's skill tracking if not exists
+					studentSkillLevels.putIfAbsent(studentId, new HashMap<>());
+
+					// Calculate weighted average for this skill
+					double count = 0.0;
+					double sum = 0.0;
+
+					if (evaluation.getInterest() != null) {
+						sum += evaluation.getInterest() * interestWeight;
+						count += interestWeight;
+					}
+					if (evaluation.getKnowledge() != null) {
+						sum += evaluation.getKnowledge() * knowledgeWeight;
+						count += knowledgeWeight;
+					}
+					if (evaluation.getExperience() != null) {
+						sum += evaluation.getExperience() * experienceWeight;
+						count += experienceWeight;
+					}
+
+					double weightedAverage = count > 0 ? sum / count : 0;
+					studentSkillLevels.get(studentId).merge(skill.getName(), weightedAverage, Math::max);
+				}
+			}
+		}
+
+		studentSkillLevels.forEach((student, skillMastery) -> {
+			// Calculate average mastery for this student
+			double averageMastery = skillMastery.values().stream()
+					.mapToDouble(Double::doubleValue)
+					.average()
+					.orElse(0.0);
+			// Categorize based on average
+			if (averageMastery >= 8.0) {
+				beginnerCount.getAndIncrement();
+			} else if (averageMastery >= 5.0) {
+				intermediateCount.getAndIncrement();
+			} else {
+				advancedCount.getAndIncrement();
+			}
+		});
+
+		// Add mastery level distribution
+		skillStats.put("beginnerCount", beginnerCount.get());
+		skillStats.put("intermediateCount", intermediateCount.get());
+		skillStats.put("advancedCount", advancedCount.get());
 	}
 }
